--- a/rocketry/githelper.ini
+++ b/rocketry/githelper.ini
@@ -1,11 +1,2 @@
-[config]
-version=1
-[notification]
-content=
-time=0
-[msgbox]
-content=
-time=0
-[openurl]
-content=
-time=0
+[settings]
+version=2
